--- a/src/assets/css/layout.css
+++ b/src/assets/css/layout.css
@@ -2,6 +2,10 @@
     display: flex;
 }
 
+.flex-col {
+    flex-direction: column;
+}
+
 .align-center {
     align-items: center;
 }
@@ -28,3 +32,4 @@
     max-width: 1400px;
     margin: 0 auto;
 }
+
