feat. category page

--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -54,10 +54,10 @@ button {
     border-radius: 5px;
     font-size: 18px;
     padding: 1rem;
-    width: 100%;
     transition: background-color 300ms;
 }
 
 .btn:hover {
+    color: #FFF;
     background-color: var(--main-bright-color);
 }
