--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -61,3 +61,49 @@ button {
     color: #FFF;
     background-color: var(--main-bright-color);
 }
+
+.btn-sm {
+    font-size: 14px;
+    padding: .75rem;
+}
+
+hr {
+    margin: 2rem 0;
+}
+
+hr.dashed {
+    border: none;
+    border-bottom: 1px dashed #D1D1D1;
+}
+
+button.wrap {
+    border: none;
+    background-color: transparent;
+    font-size: 1rem;
+    padding: .5rem 1rem;
+}
+
+button.wrap:hover {
+    background-color: rgba(0, 0, 0, .1);
+}
+
+button.wrap:active {
+    background-color: rgba(0, 0, 0, .15);
+}
+
+textarea {
+    padding: 1rem;
+    box-sizing: border-box;
+    font-size: 1rem;
+    border: 1px solid #999999;
+}
+
+.btn-sub {
+    color: #5F5F5F;
+    background-color: #EEE;
+}
+
+.btn-sub:hover {
+    color: #5F5F5F;
+    background-color: #CCC;
+}
