--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -53,7 +53,7 @@ button {
     border: none;
     border-radius: 5px;
     font-size: 18px;
-    padding: 1rem;
+    padding: .75rem 1rem;
     transition: background-color 300ms;
 }
 
