--- a/src/assets/css/layout.css
+++ b/src/assets/css/layout.css
@@ -6,6 +6,10 @@
     flex-direction: column;
 }
 
+.justify-center {
+    justify-content: center;
+}
+
 .align-center {
     align-items: center;
 }
