tweak style a bit

--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -32,6 +32,8 @@ a {
 .section-title {
     font-size: 26px;
     margin: 0 0 1rem;
+    border-bottom: 1px solid #e1e0e0;
+    padding-bottom: .5rem;
 }
 
 .radius {
