page-tarnsition middle

--- a/src/assets/css/animation.css
+++ b/src/assets/css/animation.css
@@ -18,3 +18,19 @@
     opacity: 0;
     transform: translate(-50%, -50%) scale(.95);
 }
+
+
+.page-transition {
+    position: fixed;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
+    z-index: 1000;
+}
+
+.page-transition .block {
+    background-color: #222;
+    width: 100%;
+    flex: 1;
+}
