--- a/src/assets/css/animation.css
+++ b/src/assets/css/animation.css
@@ -36,6 +36,7 @@
     flex: 1;
     transform: translateX(-100%);
     animation: 700ms ease-in-out both;
+    color: #FFF;
 }
 
 .page-transition .block:nth-of-type(1) {
